--- a/about-us.html
+++ b/about-us.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en-GB">
-<head>
+<head><script>if(location.hostname==="chadmeme-org.pages.dev"){location.replace("https://chadmeme.org"+location.pathname+location.search)}</script>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>About Chad Meme: Our Approach to Meme Culture</title>
