--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 </section>
 <section id="responsible-use">
 <h2>Using meme templates responsibly</h2>
-<p>Memes are powerful tools for communication and humor, but they can also perpetuate stereotypes, spread misinformation, or be used to harass individuals and groups. As the chad meme and related formats have become mainstream, it's worth thinking about how to use them responsibly within <strong>online humor culture</strong>.</p>
+<p>Memes are powerful tools for communication and humor, but they can also perpetuate stereotypes, spread misinformation, or be used to harass individuals and groups. As the chad meme and related formats have become mainstream, it's worth thinking about how to use them responsibly within <a href="https://supabet.ca/">Supabet</a>.</p>
 <p>The chad meme, like many internet formats, relies on archetypes and exaggeration. When used thoughtfully, it can be a vehicle for clever social commentary or harmless fun. When used carelessly, it can reinforce toxic ideas about masculinity, status, and worth. The difference often comes down to intent, context, and awareness of how the meme might be received by different audiences.</p>
 <p>Responsible meme use means considering who might be hurt by your joke, whether you're punching up or down, and whether the humor relies on dehumanizing or mocking vulnerable groups. It also means being willing to listen when someone points out that a meme has crossed a line. <strong>Meme community</strong> norms vary widely, but the best communities balance creative freedom with basic respect for others.</p>
 <details>
